Client source custom
Client source custom

--- a/KN_Order_Storage/Views/Client/Create.cshtml
+++ b/KN_Order_Storage/Views/Client/Create.cshtml
@@ -20,9 +20,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ct_client_source, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.ct_client_source, (List<SelectListItem>)ViewBag.Source, new { @class = "btn btn-default dropdown-toggle col-md-2" })         
-                @Html.ValidationMessageFor(model => model.ct_client_source)
-            </div>
+                @Html.DropDownListFor(model => model.ct_client_source, (List<SelectListItem>)ViewBag.Source, new { @id = "sourceDropDown", @class = "btn btn-default dropdown-toggle col-md-2" })         
+                @Html.ValidationMessageFor(model => model.ct_client_source)&nbsp; 
+                @Html.EditorFor(model => model.ct_client_source_cst, new { @id = "sourceCSTEditor" })
+                @Html.ValidationMessageFor(model => model.ct_client_source_cst)
+            </div>               
         </div>
 
         <div class="form-group hide">
@@ -76,7 +78,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ct_wedding_day, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ct_wedding_day)
+                @Html.EditorFor(model => model.ct_wedding_day, new { @id = "weddingdayEditor" })
                 @Html.ValidationMessageFor(model => model.ct_wedding_day)
             </div>
         </div>
@@ -147,3 +149,5 @@
 <div>
     @Html.ActionLink("返回列表", "Index")
 </div>
+
+@Scripts.Render("~/Scripts/client.js")
