--- a/KN_Order_Storage/Views/Shared/_Layout.cshtml
+++ b/KN_Order_Storage/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("客户管理", "Index", "Client")</li>
-                    <li>@Html.ActionLink("订单管理", "About", "Home")</li>
-                    <li>@Html.ActionLink("库存管理", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("订单管理", "Index", "Order")</li>
+                    <li>@Html.ActionLink("库存管理", "Index", "Inventory")</li>
                     <li>@Html.ActionLink("系统设置", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
